// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctley render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    20
     
    expenses
     totalling is 
    $605.72
  </h1>
</div>
`;

exports[`should correctley render expenses summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling is 
    $1.00
  </h1>
</div>
`;
